Update to fix word wrap in footer style bug

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -110,6 +110,7 @@ html, body {
 
 .p2 {
     color: $p2-fg-color;
+//    background: url('../images/section-watermark.png') $p2-bg-color no-repeat 0 40px;
     background-color: $p2-bg-color;
     .header, .subheader {
 	color: $p2-fg-color;
@@ -397,6 +398,7 @@ h2, .img-wrapper {
     	font-size: 13px;
     	font-size: remCalc(13px);
 	line-height: 1.4;
+	word-wrap: break-word;
     }
     .company-name {
     	font-size: 16px;
